# dogs_breed

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  commands.py  data.dvc  hw3_report.md  models.dvc  pyproject.toml
.dvc/: config
configs/: client_config.yaml  config.yaml  config_fullset.yaml  config_subset.yaml
dltoolkit/: config.py  dataset.py  export_model.py  infer.py  infer_catalyst.py  mlflow_server.py  model.py  run_server.py  tools.py  train.py  train_catalyst.py
triton_server/: client.py  client_config.py  docker-compose.yaml  requirements.txt
triton_server/model_repository/ensemble-onnx/: config.pbtxt
triton_server/model_repository/image-preproc/: config.pbtxt
triton_server/model_repository/image-preproc/1/: model.py
triton_server/model_repository/onnx-resnet18/: config.pbtxt
triton_server/model_repository/onnx-resnet18/1/: model.onnx.dvc
