[tool.poetry]
name = "dltoolkit"
version = "0.1.0"
description = ""
authors = ["Kharinaev Artyom <akharinaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
torch = "^2.0.1" 
tqdm = "^4.65.0"
mlflow = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
